@@ -1,3 +1,8 @@
+2002-03-06  James Henstridge  <james@daa.com.au>
+
+	* module.py (BuildScript._*): force a chdir before configure,
+	make, etc.
+
 2002-03-05  James Henstridge  <james@daa.com.au>
 
 	* module.py (BuildScript.build): if we are forcing a configure,
